ScratchScript.Compiler/Backend/ScratchIRParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ../Resources/Syntax/ScratchIR.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class ScratchIRParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, Event=40, Type=41, ProcedureType=42, NumberType=43, StringType=44, 
		ListType=45, StringNumberType=46, BooleanType=47, WarpIdentifier=48, StackIndexIdentifier=49, 
		Hashtag=50, Minus=51, Colon=52, End=53, Whitespace=54, NewLine=55, Number=56, 
		Identifier=57, String=58, Color=59;
	public const int
		RULE_program = 0, RULE_command = 1, RULE_block = 2, RULE_expression = 3, 
		RULE_elseIfStatement = 4, RULE_ifStatement = 5, RULE_procedureArgument = 6, 
		RULE_callProcedureArgument = 7, RULE_procedureArgumentType = 8, RULE_variableIdentifier = 9, 
		RULE_arrayIdentifier = 10, RULE_constant = 11, RULE_procedureArgumentTypeDeclaration = 12, 
		RULE_addOperators = 13, RULE_multiplyOperators = 14, RULE_booleanOperators = 15, 
		RULE_compareOperators = 16;
	public static readonly string[] ruleNames = {
		"program", "command", "block", "expression", "elseIfStatement", "ifStatement", 
		"procedureArgument", "callProcedureArgument", "procedureArgumentType", 
		"variableIdentifier", "arrayIdentifier", "constant", "procedureArgumentTypeDeclaration", 
		"addOperators", "multiplyOperators", "booleanOperators", "compareOperators"
	};

	private static readonly string[] _LiteralNames = {
		null, "'set'", "'load'", "'while'", "'repeat'", "'call'", "'raw'", "'push'", 
		"'pushat'", "'pop'", "'popat'", "'popall'", "'proc'", "'on'", "'flag'", 
		"'('", "')'", "'rawshadow'", "'endshadow'", "'!'", "'if'", "'else'", "'i:'", 
		"'f:'", "'var:'", "'arr:'", "'+'", "'~'", "'*'", "'/'", "'%'", "'&&'", 
		"'||'", "'^'", "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", "'start'", 
		null, null, "':number'", "':string'", "':list'", "':sn'", "':boolean'", 
		"':w'", "':si:'", "'#'", "'-'", "':'", "'end'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "Event", "Type", "ProcedureType", "NumberType", 
		"StringType", "ListType", "StringNumberType", "BooleanType", "WarpIdentifier", 
		"StackIndexIdentifier", "Hashtag", "Minus", "Colon", "End", "Whitespace", 
		"NewLine", "Number", "Identifier", "String", "Color"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ScratchIR.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ScratchIRParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ScratchIRParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ScratchIRParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ScratchIRParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext[] block() {
			return GetRuleContexts<BlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScratchIRVisitor<TResult> typedVisitor = visitor as IScratchIRVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 37;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 28672L) != 0)) {
				{
				{
				State = 34;
				block();
				}
				}
				State = 39;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 40;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
	 
		public CommandContext() { }
		public virtual void CopyFrom(CommandContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class LoadCommandContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Type() { return GetToken(ScratchIRParser.Type, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(ScratchIRParser.Identifier, 0); }
		public LoadCommandContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.EnterLoadCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.ExitLoadCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScratchIRVisitor<TResult> typedVisitor = visitor as IScratchIRVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLoadCommand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PushAtCommandContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(ScratchIRParser.Identifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public PushAtCommandContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.EnterPushAtCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.ExitPushAtCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScratchIRVisitor<TResult> typedVisitor = visitor as IScratchIRVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPushAtCommand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PopAllCommandContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(ScratchIRParser.Identifier, 0); }
		public PopAllCommandContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.EnterPopAllCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.ExitPopAllCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScratchIRVisitor<TResult> typedVisitor = visitor as IScratchIRVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPopAllCommand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PushCommandContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(ScratchIRParser.Identifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public PushCommandContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.EnterPushCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.ExitPushCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScratchIRVisitor<TResult> typedVisitor = visitor as IScratchIRVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPushCommand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WhileCommandContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode End() { return GetToken(ScratchIRParser.End, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext[] command() {
			return GetRuleContexts<CommandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext command(int i) {
			return GetRuleContext<CommandContext>(i);
		}
		public WhileCommandContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.EnterWhileCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.ExitWhileCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScratchIRVisitor<TResult> typedVisitor = visitor as IScratchIRVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileCommand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PopCommandContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(ScratchIRParser.Identifier, 0); }
		public PopCommandContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.EnterPopCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.ExitPopCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScratchIRVisitor<TResult> typedVisitor = visitor as IScratchIRVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPopCommand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IfCommandContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		public IfCommandContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.EnterIfCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.ExitIfCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScratchIRVisitor<TResult> typedVisitor = visitor as IScratchIRVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfCommand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RepeatCommandContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode End() { return GetToken(ScratchIRParser.End, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext[] command() {
			return GetRuleContexts<CommandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext command(int i) {
			return GetRuleContext<CommandContext>(i);
		}
		public RepeatCommandContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.EnterRepeatCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.ExitRepeatCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScratchIRVisitor<TResult> typedVisitor = visitor as IScratchIRVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRepeatCommand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CallCommandContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(ScratchIRParser.Identifier, 0); }
		public CallCommandContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.EnterCallCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.ExitCallCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScratchIRVisitor<TResult> typedVisitor = visitor as IScratchIRVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCallCommand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class SetCommandContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public VariableIdentifierContext variableIdentifier() {
			return GetRuleContext<VariableIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public SetCommandContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.EnterSetCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.ExitSetCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScratchIRVisitor<TResult> typedVisitor = visitor as IScratchIRVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSetCommand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PopAtCommandContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(ScratchIRParser.Identifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public PopAtCommandContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.EnterPopAtCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.ExitPopAtCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScratchIRVisitor<TResult> typedVisitor = visitor as IScratchIRVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPopAtCommand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RawCommandContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(ScratchIRParser.Identifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CallProcedureArgumentContext[] callProcedureArgument() {
			return GetRuleContexts<CallProcedureArgumentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CallProcedureArgumentContext callProcedureArgument(int i) {
			return GetRuleContext<CallProcedureArgumentContext>(i);
		}
		public RawCommandContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.EnterRawCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IScratchIRListener typedListener = listener as IScratchIRListener;
			if (typedListener != null) typedListener.ExitRawCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScratchIRVisitor<TResult> typedVisitor = visitor as IScratchIRVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRawCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(Context, State);
		EnterRule(_localctx, 2, RULE_command);
		try {
			int _alt;
			State = 95;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				_localctx = new SetCommandContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 42;
				Match(T__0);
				State = 43;
				variableIdentifier();
				State = 44;
				expression();
				}
				break;
			case T__1:
				_localctx = new LoadCommandContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 46;
				Match(T__1);
				State = 47;
				Match(Type);
				State = 48;
				Match(Identifier);
				}
				break;
			case T__2:
				_localctx = new WhileCommandContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 49;
				Match(T__2);
				State = 50;
				expression();
				State = 54;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
				while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						State = 51;
						command();
						}
						} 
					}
					State = 56;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
				}
				State = 57;
				Match(End);
				}
				break;
			case T__3:
				_localctx = new RepeatCommandContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 59;
				Match(T__3);
				State = 60;
				expression();
				State = 64;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
				while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						State = 61;
						command();
						}
						} 
					}
					State = 66;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
				}
				State = 67;
				Match(End);
				}
				break;
			case T__19:
				_localctx = new IfCommandContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 69;
				ifStatement();
				}
				break;
			case T__4:
				_localctx = new CallCommandContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 70;
				Match(T__4);
				State = 71;
				Match(Identifier);
				}
				break;
			case T__5:
				_localctx = new RawCommandContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 72;
				Match(T__5);
				State = 73;
				Match(Identifier);
				State = 77;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
				while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						State = 74;
						callProcedureArgument();
						}
						} 
					}
					State = 79;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
				}
				}
				break;
			case T__6:
				_localctx = new PushCommandContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 80;
				Match(T__6);
				State = 81;
				Match(Identifier);
				State = 82;
				expression();
				}
				break;
			case T__7:
				_localctx = new PushAtCommandContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 83;
				Match(T__7);
				State = 84;
				Match(Identifier);
				State = 85;
				expression();
				State = 86;
				expression();
				}
				break;
			case T__8:
				_localctx = new PopCommandContext(_localctx);
				EnterOuterAlt(_localctx, 10);
				{
				State = 88;
				Match(T__8);
				State = 89;
				Match(Identifier);
				}
				break;
			case T__9:
				_localctx = new PopAtCommandContext(_localctx);
				EnterOuterAlt(_localctx, 11);
				{
				State = 90;
				Match(T__9);
				State = 91;
				Match(Identifier);
				State = 92;
				expression();
				}
				break;
			case T__10:
				_localctx = new PopAllCommandContext(_localctx);
				EnterOuterAlt(_localctx, 12);
				{
				State = 93;
				Match(T__10);
				State = 94;
				Match(Identifier);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
